# codecrucible-synth

./: .codecrucible-history.json  .codecrucible-tasks.json  .codecrucible.yaml  .dockerignore  .env.example  .env.test  .env.timeout-optimized  .eslintrc.cjs  .gitignore  .gitmodules  .npmignore  .prettierignore  .prettierrc.json  2025-09-06-this-session-is-being-continued-from-a-previous-co.txt  ADVANCED_OPTIMIZATION_SUMMARY.md  AGENT-1-COMPLETION-REPORT.md  AGENTS.md  AGENT_2_FINAL_REPORT.md  AGENT_3_RUNTIME_COORDINATION_COMPLETION_REPORT.md  AGENT_ANALYSIS_REPORT.md  AGENT_AUDIT_REPORT.md  AGENT_FUNCTIONALITY_AUDIT.md  AI_INSTRUCTIONS.md  APPLE_STANDARD_OPTIMIZATION_REPORT.md  APPLICATION_LAYER_REFACTOR_REPORT.md  ARCHITECTURAL_CONSOLIDATION_SUMMARY.md  ARCHITECTURE.md  ARCHITECTURE_IMPROVEMENTS.md  AUDIT_ITERATION_SUMMARY.md  AUTONOMOUS_MODEL_SELECTION_COMPLETE.md  BUILD.md  CHANGELOG.md  CI-CD.md  CI_CD_SETUP.md  CLAUDE.md  CODE-QUALITY.md  CODECRUCIBLE.md  CODECRUCIBLE_AUDIT_REPORT.md  COMPILATION_ERRORS_REPORT.md  COMPLETE_STRIPE_AUDIT_REPORT.md  (+296 more)
.claude/: .mcp.json  settings.local.json
.code/: app-model-client.ts  cli-tool-router.ts  concrete-orch.ts  enhanced-tools.ts  fs-tools.ts  init.ts  last_file.txt  mcp-client-manager.ts  mcp-fs.ts  mcp-int.ts  mcp-registry.ts  mcp-server-manager.ts  mcp-tools.ts  model-client.ts  nlp.ts  ollama-adapter.ts  ollama-provider.ts  ollama-tool.ts  run-cli.ts  streaming-handler.ts  streaming-manager.ts  system-prompt.ts  tool-integration.ts  tool-registry.ts  typed-identifiers.ts  unified-cli-coordinator.ts  unified-orch.ts
.github/: dependabot.yml
Docs/: 2025-01-02-155230-research-audit.md  2025-01-03-092859-research-audit.md  2025-01-05-143000-system-prompt-overhaul-report.md  2025-01-05-161230-response-pipeline-research-audit.md  2025-01-05-173000-research-audit.md  2025-01-22-185700-circular-dependency-analysis.md  2025-01-22-session-summary-and-implementation-guide.md  2025-01-26-153000-comprehensive-repository-audit.md  2025-08-21-143000-research-audit.md  2025-08-21-170000-cli-response-audit.md  2025-08-22-CRITICAL-SECURITY-REMEDIATION-SESSION.md  2025-08-23-051735-research-audit.md  2025-08-23-074128-research-audit.md  2025-08-23-141500-mcp-integration-audit.md  2025-08-23-164500-final-security-audit.md  2025-08-23-IMPLEMENTATION-GUIDE.md  2025-08-23-comprehensive-audit-report.md  2025-08-23-comprehensive-system-analysis-report.md  2025-08-23-final-audit-report.md  2025-08-23-gap-analysis-and-recommendations.md  2025-08-23-god-object-refactoring-session-summary.md  2025-08-23-implementation-guide.md  2025-08-23-iteration-session-summary.md  (+154 more)
rust-executor/: .gitignore  Cargo.toml  codecrucible-rust-executor.win32-x64-msvc.node  index.js  package-lock.json  package.json
rust-executor/src/: lib.rs
rust-executor/src/executor/: core.rs  mod.rs  sandbox.rs  streaming.rs
rust-executor/src/executors/: command.rs  filesystem.rs  mod.rs
rust-executor/src/protocol/: bridge.rs  communication.rs  messages.rs  mod.rs  ndjson.rs
rust-executor/src/runtime/: mod.rs  shared_runtime.rs
rust-executor/src/security/: capabilities.rs  isolation.rs  mod.rs  validation.rs
rust-executor/src/streaming/: atomic_metrics.rs  chunk_batcher.rs  error_handling.rs  mod.rs  worker_pool.rs
rust-executor/src/tools/: analysis.rs  filesystem.rs  generation.rs  mod.rs
rust-executor/src/utils/: cleanup.rs  mod.rs  monitoring.rs  performance.rs
rust-executor/tests/: generation_tests.rs  integration_tests.rs
(+1792 files in other folders)
