[package]
name = "codecrucible-rust-executor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings - Use version with better instance method support
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

# Async runtime
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"

# JSON/serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cross-platform process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal", "user", "fs", "resource"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "jobapi", "jobapi2", "handleapi", "winbase", "errhandlingapi"] }

# Common dependencies
libc = "0.2"
regex = "1.11"

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
