[package]
name = "codecrucible-rust-executor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
filesystem_permissions = []

[dependencies]
# NAPI bindings - Use version with better instance method support
napi = { version = "2", features = ["napi8"] }
napi-derive = "2"

# Async runtime (reduced features to minimize compilation complexity)
tokio = { version = "1.0", features = ["rt", "rt-multi-thread", "sync", "time", "io-util", "fs", "process", "macros"] }
futures = "0.3"

# JSON/serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sysinfo = "0.30"

# Cross-platform process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["process", "signal"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "handleapi", "errhandlingapi"] }

# Common dependencies
libc = "0.2"

# Monitoring and observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.21"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
base64 = "0.21"
regex = "1.0"
tree-sitter = "0.25"
tree-sitter-rust = "0.24"

[build-dependencies]
napi-build = "2.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"
syn = { version = "2", features = ["full"] }
